SVG in React blog post

--- a/src/content/blog/responsive-design-with-tailwind.mdx
+++ b/src/content/blog/responsive-design-with-tailwind.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Responsive Design With Tailwind'
+title: 'Responsive Design with Tailwind'
 description: 'Using responsive utility variants to build adaptive user interfaces.'
 pubDate: 'Aug 06 2023'
-heroImage: '/blog/responsive-design-with-tailwind.jpg'
+heroImage: '/thumbnails/responsive-design-with-tailwind.jpg'
 ---
 
 Responsive web design is essential in today's web applications as it ensures that they adapt to different screen sizes and devices, providing an optimal user experience.
@@ -13,9 +13,9 @@ In this blog post, we will explore how to achieve responsive design using Tailwi
 
 Responsive design is an approach to web design that allows web applications adjusting their layout and content automatically based on the user's device and screen size, providing an optimal viewing experience across various devices.
 
-![image](/images/responsive-design-ughh.jpg)
+![Responsive Design Ughh](/images/responsive-design-ughh.jpg)
 
-Responsive design is becoming more and more challenging to achieve due to diverse device types. I mean, just look at those folding screens. It's getting complicated.
+Responsive design is becoming more and more challenging to achieve due to diverse device types. *I mean, just look at those folding screens. It's getting complicated.*
 
 However, with the emergence of modern CSS technologies like Tailwind CSS, implementing responsive designs has become much more accessible and efficient.
 
@@ -43,7 +43,7 @@ Simply prefix the utility with the breakpoint name, followed by the `:` characte
 
 By default, Tailwind uses a mobile-first approach for its breakpoint system, much like what you may be familiar with in other frameworks such as Bootstrap.
 
-![image](/images/mobile-first.jpg)
+![Mobile First](/images/mobile-first.jpg)
 
 That means if mobile devices are targeted, you need to start styling without any prefix, not the `sm:` prefixed version. Any unprefixed utility take effect on all screen sizes.
 
