--- a/src/content/blog/svg-components-in-react.mdx
+++ b/src/content/blog/svg-components-in-react.mdx
@@ -2,18 +2,18 @@
 title: 'SVG Components in React'
 description: 'Importing Scalable Vector Graphics in a React app in different ways.'
 pubDate: 'Aug 08 2023'
-heroImage: '/thumbnails/svg-components-in-react.jpg'
+heroImage: '../../assets/thumbnails/svg-components-in-react.jpg'
 ---
 
 Every web developer has heard of SVGs. It's becoming increasingly popular these days, thanks to its advantages over raster graphics.
 
 As the name suggests (SVG stands for Scalable Vector Graphics), they are **scalable**, meaning they can be displayed at any resolution. SVGs are **small** in size compared to raster images, which is very important as package sizes are getting bigger these days.
 
-![SVG vs Raster](/images/svg-vs-raster.jpg)
+![SVG vs Raster](../../assets/images/svg-vs-raster.jpg)
 
 SVGs are **easy to edit** because they are code-based. They consist of basic geometric shapes and paths. This also allows them to be animated to add interactivity.
 
-![SVG is math](/images/svg-is-code.jpg)
+![SVG is math](../../assets/images/svg-is-code.jpg)
 
 These are reasons to use SVG in your next project. But how do you use SVGs in a React application?
 
