--- a/src/content/blog/responsive-design-with-tailwind.mdx
+++ b/src/content/blog/responsive-design-with-tailwind.mdx
@@ -65,7 +65,7 @@ We added the breakpoint `sm:` to make the card above responsive. And here is how
 - Flex direction is column by default (`flex-col`)
 - Flex direction is row for screens bigger than `sm` (`sm:flex-row`)
 - Image height is 28 by default (`h-28`)
-- Image height is 40 by default (`sm:h-40`)
+- Image height is 40 for screens bigger than `sm` (`sm:h-40`)
 
 ```html
 <div class="flex flex-col sm:flex-row items-center gap-8 border-2 rounded-lg p-4 bg-white shadow-xl">
