--- a/src/content/blog/svg-components-in-react.mdx
+++ b/src/content/blog/svg-components-in-react.mdx
@@ -22,7 +22,7 @@ These are reasons to use SVG in your next project. But how do you use SVGs in a 
 Similar to raster images, SVGs can be implemented by specifying the path using the `src` attribute in the image tag.
 
 ```html
-<img src="https://blog.yuuns.tech/pancake.svg" />
+<img src="https://blog.yunusemre.dev/pancake.svg" />
 ```
 
 The path can either be relative or absolute.
